--- a/src/app/maternitypatients/maternitypatients.component.html
+++ b/src/app/maternitypatients/maternitypatients.component.html
@@ -267,9 +267,8 @@
                                 autocomplete="off"
                                 class="form-control"
                                 placeholder="מס' מטופל"
-                                formControlName="PatientNumber"                                
-                                minlength="3"
-                                type="number"
+                                formControlName="PatientNumber"                                                                
+                                type="tel"
                             />
                         </mat-form-field>
                     </div>
@@ -283,9 +282,8 @@
                                 autocomplete="off"
                                 class="form-control"
                                 placeholder="ת.ז"
-                                formControlName="PatientId"                                
-                                minlength="9"
-                                type="text"
+                                formControlName="PatientId"                                                           
+                                type="tel"
                             />
                         </mat-form-field>
                     </div>
