--- a/src/app/employees-manage-dash/employees-manage-dash.component.html
+++ b/src/app/employees-manage-dash/employees-manage-dash.component.html
@@ -10,10 +10,10 @@
     <h1 class="page-title text-center" *ngIf="managerType == 'research'">ניהול עובדי קרן מחקרים</h1>
     <h1 class="page-title text-center" *ngIf="managerType == 'hr' || managerType == 'admin'">ניהול עובדים</h1>
     <h1 class="page-title text-center" *ngIf="managerType == 'stager'">ניהול סטאג'רים</h1>
-    <div class="container-fluid trans-80 mb-2">
+    <div class="container-fluid mb-2">
         <div class="row search-cont">
             <div class="col">
-                <div dir="rtl" class="card w-85-p">
+                <div dir="rtl" class="card">
                     <div dir="rtl" class="card-body">
                         <form class="form" [formGroup]="searchEmployeesGroup">
                             <div class="row">
