--- a/src/app/infection-report/infection-report.component.html
+++ b/src/app/infection-report/infection-report.component.html
@@ -1,4 +1,4 @@
-<h1 class="page-title text-center">דוח זיהומים</h1>
+<h1 class="page-title text-center">דוח אנטיביוטיקות</h1>
 
 <div class="example-button-container" style="padding: 60px">
     <button
@@ -21,6 +21,7 @@
             </mat-radio-group>
         </div>
     </div>
+    <button mat-raised-button (click)="exporter.exportTable('xlsx', {fileName:'InfectionReport', sheet: 'sheet_name', Props: {Author: 'Onn-Line'}})">Excel</button>
 </div>
 <div class="d-none container-fluid">
     <div class="row">
@@ -102,10 +103,11 @@
                         <mat-label>חפש</mat-label>
                         <input matInput (keyup)="applyFilter($event)" placeholder="חפש" #input>
                       </mat-form-field>
-                    <table
+                    <mat-table
+                        #exporter="matTableExporter"
                         class="table table-striped table-responsive-md"
                         matSort
-                        mat-table
+                        matTableExporter 
                         [dataSource]="dataSource"
                     >                        
                         <ng-container matColumnDef="CaseNumber">
@@ -152,6 +154,27 @@
                         </ng-container>
                        
 
+                        <ng-container matColumnDef="DrugDate">
+                            <th mat-header-cell *matHeaderCellDef> תאריך הוראה
+                            </th>
+                            <td mat-cell *matCellDef="let element">
+                                {{ element.DrugDate }}
+                            </td>
+                        </ng-container>
+                        <ng-container matColumnDef="Frequency">
+                            <th mat-header-cell *matHeaderCellDef> תדירות
+                            </th>
+                            <td mat-cell *matCellDef="let element">
+                                {{ element.Frequency }}
+                            </td>
+                        </ng-container>
+                        <ng-container matColumnDef="DateDiffInDays">
+                            <th mat-header-cell *matHeaderCellDef> משך ימים
+                            </th>
+                            <td mat-cell *matCellDef="let element">
+                                {{ element.DateDiffInDays }}
+                            </td>
+                        </ng-container>
                         <ng-container matColumnDef="Height">
                             <th mat-header-cell *matHeaderCellDef> גובה
                             </th>
@@ -159,7 +182,6 @@
                                 {{ element.Height }}
                             </td>
                         </ng-container>
-
 
                         <ng-container matColumnDef="Weight">
                             <th mat-header-cell *matHeaderCellDef> משקל
@@ -224,13 +246,13 @@
                             mat-row
                             *matRowDef="let row; columns: displayedColumns"
                         ></tr>
-                    </table>
+                    </mat-table>
                 </div>
                 <!-- PAGINATION -->
                 <mat-paginator
                     [length]="resultsLength"
-                    [pageSizeOptions]="[50, 100]"
-                    [pageSize]="50"
+                    [pageSizeOptions]="[200, 250]"
+                    [pageSize]="200"
                     showFirstLastButtons
                     (page)="getPaginatorData($event)"
                 ></mat-paginator>
