khald b7b 2ls6ah

--- a/src/app/nurses-manage-dashboard/nurses-manage-dashboard.component.html
+++ b/src/app/nurses-manage-dashboard/nurses-manage-dashboard.component.html
@@ -642,7 +642,7 @@
             <i class="material-icons">home</i>
         </button>
         <span class="mr-3" *ngIf="UserName == 'amabushkar'">&#8734; 😋 אמירה הכניסה רק באישור מיוחד &#8734;</span>
-        <span class="mr-3" *ngIf="UserName != 'amabushkar'">&#8734; 😨 ייתכן ואין לך הרשאת צפייה במידע זה &#8734;</span>
+        <span class="mr-3">&#8734; ייתכן ואין לך הרשאת צפייה במידע זה &#8734;</span>
     </h1>
 </ng-template>
 
