--- a/src/app/fill-report/fill-report.component.html
+++ b/src/app/fill-report/fill-report.component.html
@@ -28,7 +28,7 @@
                             print
                         </span>
                     </button>
-                    <button mat-menu-item [disabled]="!creator" class="menuBtns" (click)="onSubmit()">שמירה
+                    <button mat-menu-item [disabled]="!creator || waitToSaveBtn" class="menuBtns" (click)="onSubmit()">שמירה
                         <span class="material-icons">
                             save
                         </span>
