--- a/src/app/nurses-dashboard/nurses-dashboard.component.html
+++ b/src/app/nurses-dashboard/nurses-dashboard.component.html
@@ -340,13 +340,13 @@
             </div>
             <div class="modal-footer text-left">
                 <button matTooltip="דוח חדש" class="btn btn-primary btn-raised ml-3 float-left" id="BtnStyle"
-                    (click)="onSubmit('0')" type="submit" mat-raised-button>
+                    (click)="onSubmit('0')" type="submit" [disabled]="waitToSaveBtn" mat-raised-button>
                     <span class="material-icons">
                         create_new_folder
                     </span>
                 </button>
                 <button matTooltip="שמור והמשך דיווח" class="btn btn-primary btn-raised ml-3 float-left" id="BtnStyle"
-                    (click)="onSubmit('1')" type="submit" mat-raised-button>
+                    (click)="onSubmit('1')" type="submit" [disabled]="waitToSaveBtn" mat-raised-button>
                     <span class="material-icons">
                         save
                     </span>
@@ -434,13 +434,13 @@
                     </div>
                     <div class="modal-footer text-left">
                         <button matTooltip="דוח חדש" class="btn btn-primary btn-raised ml-3 float-left" id="BtnStyle"
-                            (click)="onSubmit('0')" type="submit" mat-raised-button>
+                            (click)="onSubmit('0')" type="submit" [disabled]="waitToSaveBtn" mat-raised-button>
                             <span class="material-icons">
                                 create_new_folder
                             </span>
                         </button>
                         <button matTooltip="שמור והמשך דיווח" class="btn btn-primary btn-raised ml-3 float-left"
-                            id="BtnStyle" (click)="onSubmit('1')" type="submit" mat-raised-button>
+                            id="BtnStyle" (click)="onSubmit('1')" type="submit" [disabled]="waitToSaveBtn" mat-raised-button>
                             <span class="material-icons">
                                 save
                             </span>
