--- a/src/app/form-dashboard/cpr-form/cpr-form.component.css
+++ b/src/app/form-dashboard/cpr-form/cpr-form.component.css
@@ -29,6 +29,9 @@
 #firstTable > tbody > tr > td {
     white-space: nowrap; 
 }
+.table td, .table th {
+    width: 8%;
+}
 .col-1{
     max-width: 114px;
 }
